# theway

./: .gitignore  Cargo.toml  LICENSE  README.md  bg.json  cs.json  de.json  es.json  fi.json  hr.json  it.json  ko.json  lv.json  pt-pt.json  ro.json  sequence.json  zh-hans.json
book/: bg.json  ca.json  cs.json  de.json  en.json  es.json  fi.json  fr.json  hr.json  hu.json  it.json  ja.json  ko.json  lt.json  lv.json  nl.json  pl.json  pt-br.json  pt-pt.json  ro.json  ru.json  sk.json  sl.json  sv.json  zh-hans.json  zh-hant.json
book/raw/: ca.json  en.json  fr.json  hu.json  pl.json  ru.json  sl.json  sv.json  zh-hant.json
crawler/: crawler.js  lang.js  package-lock.json  package.json
lcg/: find-lcg.js  generate-lcg.js
src/: book.rs  format.rs  main.rs  point.rs  typst.rs
typst/: template.typ
